# quad-trace

./: .gitignore  README.md  calibrate.py  detect.py  gcps_latlon.npy  gcps_pixels.npy  gen_gcps.py  gen_synthetic.py  geo.py  homography.npy  homography.py  ingest.py  map.py  pipeline.py  pyproject.toml  reproject.py  roi.py  roi_mask.npy  run.sh  test_homography.py  visualize.py
