[project]
name = "quad-trace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "numpy>=2.5.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "piexif>=1.1.3",
    "pyarrow>=24.0.0",
    "pyproj>=3.7.2",
    "yt-dlp>=2026.6.9",
]
